--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
 {
   "extends": "eslint-config-airbnb",
+  "rules": {
+    "linebreak-style": 0,
+    "no-nested-ternary": 0
+  },
   "env": {
-    "browser": true,
+    "browser": true
   }
 }
