--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prepublish": "npm run clean && npm run build",
     "test": "jest",
     "gh-pages": "npm run storybook:clean && npm run storybook:build && npm run storybook:publish",
-    "storybook": "BABEL_ENV=commonjs start-storybook -p 9001 -c .storybook",
+    "storybook": "cross-env BABEL_ENV=commonjs start-storybook -p 9001 -c .storybook",
     "storybook:build": "build-storybook -c .storybook -o _gh-pages",
     "storybook:clean": "rimraf _gh-pages",
     "storybook:publish": "git-directory-deploy --directory _gh-pages --branch gh-pages",
@@ -61,7 +61,7 @@
     "babel-jest": "^20.0.3",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
-    "bulma": "^0.4.2",
+    "bulma": "^0.6.0",
     "cross-env": "^5.0.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
